--- a/public/Css/inicio.css
+++ b/public/Css/inicio.css
@@ -10,8 +10,13 @@ body {
   position: absolute;
   top: 20px;
   left: 30px;
-  height: 60px;
 }
+
+.logo img {
+  width: 300px;
+  height: auto;
+}
+
 
 .contenedor {
   display: flex;
